--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                                       <a class="nav-link active" aria-current="page" href="./pages/login.html">Iniciar sesión</a>
                                     </li>
                                     <li class="nav-item">
-                                      <a class="nav-link active" aria-current="page" href="./pages/login.html"><button type="button" class="btn btn-warning text-white" style="background-color: f39237;font-weight: bold !important;font-size: 10px;">Registrate Gratis</button></a>
+                                      <a class="nav-link active" aria-current="page" href="./pages/login.html"><button type="button" class="btn btn-warning text-white" style="background-color: f39237;border-color: f39237;font-weight: bold !important;font-size: 10px;">Registrate Gratis</button></a>
 
                                     </li>
                                   </ul>
@@ -70,7 +70,7 @@
                     <div class="col-12 col-lg-6 d-flex flex-column justify-content-center align-items-center">
                         <h1 class="main_h1_tittlindext" style="font-size:30px ; width: 510px;">¿DÓNDE ES MÁS BARATO HACER MI LISTA DE COMPRAS?</h1>
                         <p class="text-center" style="font-size:15px ;width: 60%;">Compara  los productos que más consumes en más de 10 Supermercados Nacionales</p>
-                        <a href="./pages/selectprices.html"><button type="button" class="btn btn-warning text-white" style="background-color: f39237;">COMPARA TU LISTA</button></a>
+                        <a href="./pages/selectprices.html"><button type="button" class="btn btn-warning text-white" style="background-color: f39237; border-color: f39237;">COMPARA TU LISTA</button></a>
                       </div>
                     <div class="col-12 col-lg-6">
                         <img src="./images/dashboard.png" class="img-fluid" alt="...">
@@ -146,7 +146,7 @@
                         </div>
                       
                         <div class="col-12 col-lg-12 d-flex justify-content-center" style="margin-top: 5%;">
-                                <a href="./pages/login.html"><button type="button" class="btn btn-warning text-white" style="background-color: f39237; font-size:35px; font-weight: bolder;">REGISTRATE GRATIS</button></a>
+                                <a href="./pages/login.html"><button type="button" class="btn btn-warning text-white" style="background-color: f39237; border-color: f39237;font-size:35px; font-weight: bolder;">REGISTRATE GRATIS</button></a>
                         </div>
 
                       </div>
