--- a/pages/login.html
+++ b/pages/login.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" href="../images/Lista de Compra Baja.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
 </head>
-<body>
+<body id="bodyLogin">
     
     <main class="main-login">
         <div class="main-tittle-login">
