Creacion de conexion SASS, css y animaciones

--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="./images/Lista de Compra Baja.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <meta name="description" content="Descubre dónde comprar más barato con 'Tu Mejor Lista de Compra'. Compara precios en supermercados de República Dominicana y ahorra en cada compra. ¡Empieza a ahorrar ahora">
+    <meta name="keywords" content="precios bajos,supermercados, mercados, colmados,ahorro, comparador de precios, barato,">
     <title>Tu Mejor Lista de Compra/Inicio</title>
 </head>
 <body>
@@ -68,12 +71,12 @@
             <div class="container-fluid">
                 <div class="row justify-content-start">
                     <div class="col-12 col-lg-6 d-flex flex-column justify-content-center align-items-center">
-                        <h1 class="main_h1_tittlindext" style="font-size:30px ; width: 510px;">¿DÓNDE ES MÁS BARATO HACER MI LISTA DE COMPRAS?</h1>
-                        <p class="text-center" style="font-size:15px ;width: 60%;">Compara  los productos que más consumes en más de 10 Supermercados Nacionales</p>
-                        <a href="./pages/selectprices.html"><button type="button" class="btn btn-warning text-white" style="background-color: f39237; border-color: f39237;">COMPARA TU LISTA</button></a>
+                        <h1 class="main_h1_tittlindext animate__animated animate__fadeInLeft" style="font-size:30px ; width: 510px;">¿DÓNDE ES MÁS BARATO HACER MI LISTA DE COMPRAS?</h1>
+                        <p class="text-center animate__animated animate__fadeInLeft" style="font-size:15px ;width: 60%;">Compara  los productos que más consumes en más de 10 Supermercados Nacionales</p>
+                        <a href="./pages/selectprices.html"><button type="button" class="btn btn-warning text-white animate__animated animate__fadeIn" style="background-color: f39237; border-color: f39237;">COMPARA TU LISTA</button></a>
                       </div>
                     <div class="col-12 col-lg-6">
-                        <img src="./images/dashboard.png" class="img-fluid" alt="...">
+                        <img src="./images/dashboard.png" class="img-fluid animate__animated animate__fadeInRight" alt="...">
                     </div>
                   </div>
                 </div>
@@ -116,7 +119,7 @@
                 <div class="container-fluid " style="margin-top: 10%;">
                       <div class="row d-flex flex-row-reverse">
                         <div class="col-12 col-lg-6 d-flex flex-column justify-content-center align-items-center">
-                            <h2 class="main_h2_section3" style="font-size:65px ; width: 560px;color: white; font-weight: bolder;;">+100 productos con sus precios</h2>
+                            <h2 class="main_h2_section3" style="font-size:65px ; width: 100%;color: white; font-weight: bolder;;">+100 productos con sus precios</h2>
                             <p class="text-center" style="font-size:15px ;width: 60%;">Desde carnes, huevos, pan hasta enlatados podrás acceder a sus precios más recientes y compararlos para una mejor compra</p>
                         </div>
                           <div class="col-12 col-lg-6 d-flex justify-content-center">
@@ -127,7 +130,7 @@
                       
                       <div class="row d-flex flex-row-reverse">
                         <div class="col-12 col-lg-6 d-flex flex-column d-flex justify-content-center align-items-center ">
-                            <h2 class="main_h2_section3" style="font-size:60px ; width: 660px ;color: white; font-weight: bolder;;">+10 supermercados para comparar</h2>
+                            <h2 class="main_h2_section3" style="font-size:60px ; width: 100% ;color: white; font-weight: bolder;;">+10 supermercados para comparar</h2>
                             <p class="text-center" style="font-size:15px ;width: 60%;">Podrás comparar tu lista de compra en supermercados, mercados y colmados</p>
                         </div>
                           <div class="col-12 col-lg-6 d-flex justify-content-center">
@@ -138,7 +141,7 @@
 
                       <div class="row d-flex flex-row-reverse">
                         <div class="col-12 col-lg-6 d-flex flex-column justify-content-center align-items-center">
-                            <h2 class="main_h2_section3" style="font-size:65px ; width: 500px;color: white; font-weight: bolder;;">Notificaciones de precios</h2>
+                            <h2 class="main_h2_section3" style="font-size:65px ; width: 80%;color: white; font-weight: bolder;;">Notificaciones de precios</h2>
                             <p class="text-center" style="font-size:15px ;width: 60%;">Guarda tu lista y recibe notificaciones al instante cuando ocurran cambios</p>
                         </div>
                           <div class="col-12 col-lg-6 d-flex justify-content-center">
