Actualizacion final entrega

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" href="./images/Lista de Compra Baja.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <meta name="description" content="Descubre dónde comprar más barato con Tu Mejor Lista de Compra. Compara precios en supermercados de República Dominicana y ahorra en cada compra. ¡Empieza a ahorrar ahora!">
-    <meta name="keywords" content="precios bajos,supermercados, mercados, colmados,ahorro, comparador de precios, barato,">
+    <meta name="keywords" content="precios bajos,supermercados, mercados, colmados,ahorro, comparador de precios, barato">
     <title>Tu Mejor Lista de Compra|Inicio</title>
 </head>
 <body>
